--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <main class="main">
 
     <section id="hero" class="hero section dark-background">
-      <img src="assets/img/hero-img.jpg" alt="">
+      <img src="assets/img/hero-img.jpg" alt="CV puslapio virselio nuotrauka">
       <div class="container d-flex flex-column align-items-center justify-content-center text-center">
         <h2>Esu Julija Čalaja</h2>
         <p><span class="typed" data-typed-items="Dirbtinio intelekto sistemų studentė, AI entuziastė, Programuotoja"></span></p>
@@ -68,7 +68,8 @@
 
             <div class="row gy-4">
               <div class="col-lg-5">
-                <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+                <img src="assets/img/profile-img.jpg" class="img-fluid" alt="Julijos Čalajos profilio nuotrauka">
+
               </div>
 
               <div class="col-lg-7 about-info">
@@ -128,6 +129,60 @@
         </div>
       </div>
     </section>
+<section id="services" class="services section">
+
+  <div class="container section-title">
+    <h2>Services</h2>
+    <p>Vaizdo ir garso įrašai, susiję su mano veikla</p>
+  </div>
+
+  <div class="container">
+
+    <div class="row gy-4">
+
+      <div class="col-lg-4">
+        <div class="service-item">
+          <h4>Programavimo procesas</h4>
+          <p>Vaizdo įrašas, saugomas mano projekto media aplanke.</p>
+
+          <video controls width="100%">
+            <source src="assets/media/typing.mp4" type="video/mp4">
+            Jūsų naršyklė nepalaiko šio vaizdo formato.
+          </video>
+        </div>
+      </div>
+
+      <div class="col-lg-4">
+        <div class="service-item">
+          <h4>YouTube pristatymas</h4>
+          <p>Integruotas vaizdo įrašas naudojant iframe.</p>
+
+          <iframe width="100%" height="215" 
+                  src="https://www.youtube.com/embed/BoUVIhtqjAw" 
+                  title="YouTube Video" 
+                  frameborder="0" 
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                  allowfullscreen>
+          </iframe>
+        </div>
+      </div>
+
+      <div class="col-lg-4">
+        <div class="service-item">
+          <h4>Garso įrašas</h4>
+          <p>Garso pavyzdys iš Pixabay, saugomas media aplanke.</p>
+
+          <audio controls>
+            <source src="assets/media/ticking.mp3" type="audio/mpeg">
+            Jūsų naršyklė nepalaiko garso formato.
+          </audio>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+</section>
 
     <section id="resume" class="resume section">
       <div class="container section-title">
