--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <link href="assets/css/main.css" rel="stylesheet">
-  <link href="assets/css/custom.css" rel="stylesheet">
+<link href="assets/css/main.css" rel="stylesheet">
+<link href="assets/css/custom.css" rel="stylesheet">
+
+
 </head>
 
 <body class="index-page">
@@ -257,23 +259,35 @@
 
     <div class="portfolio-grid">
 
-      <div class="portfolio-item">
-        <img src="assets/img/lab_32.png" alt="3 laboratorinis grafikas 2">
-      </div>
+  <div class="portfolio-item">
+  <a href="#">
+    <img src="assets/img/lab_32.png">
+    <p class="portfolio-caption">3 laboratorinis — grafikas Nr. 2</p>
+  </a>
+</div>
 
-      <div class="portfolio-item">
-        <img src="assets/img/lab_41.png" alt="4 laboratorinis grafikas 1">
-      </div>
 
-      <div class="portfolio-item">
-        <img src="assets/img/lab_42.png" alt="4 laboratorinis grafikas 2">
-      </div>
+  <div class="portfolio-item">
+    <a href="#">
+      <img src="assets/img/lab_41.png" alt="4 laboratorinis grafikas 1">
+      <p class="portfolio-caption">4 laboratorinis — grafikas Nr. 1</p>
+    </a>
+  </div>
 
-    </div>
+  <div class="portfolio-item">
+    <a href="#">
+      <img src="assets/img/lab_42.png" alt="4 laboratorinis grafikas 2">
+      <p class="portfolio-caption">4 laboratorinis — grafikas Nr. 2</p>
+    </a>
+  </div>
+
+</div>
+
 
   </div>
 
 </section>
+
 
 
 
