--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mano CV</title>
 
+
   <meta name="author" content="Julija Čalaja">
   <meta name="description" content="Julija Čalaja CV puslapis.">
   <meta name="keywords" content="CV, Julija Čalaja, Dirbtinio intelekto sistemos">
@@ -35,7 +36,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
       <a href="index.html" class="logo d-flex align-items-center">
-        <h1 class="sitename">DevFolio</h1>
+        <h1 class="sitename">Julija Čalaja</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -55,7 +56,9 @@
   <main class="main">
 
     <section id="hero" class="hero section dark-background">
-      <img src="assets/img/hero-img.jpg" alt="CV puslapio virselio nuotrauka">
+      <img src="assets/img/mojofoto.jpg" alt="CV puslapio virselio nuotrauka"
+     loading="eager">
+
       <div class="container d-flex flex-column align-items-center justify-content-center text-center">
         <h2>Esu Julija Čalaja</h2>
         <p><span class="typed" data-typed-items="Dirbtinio intelekto sistemų studentė, AI entuziastė, Programuotoja"></span></p>
@@ -77,8 +80,9 @@
               <div class="col-lg-7 about-info">
                 <p><strong>Name: </strong> <span>Julija Čalaja</span></p>
                 <p><strong>Profile: </strong> <span>Dirbtinio intelekto sistemų studentė</span></p>
-                <p><strong>Email: </strong> <span>iiuliokk@gmail.com</span></p>
-                <p><strong>Phone: </strong> <span>+37062939466</span></p>
+                <p><a href="mailto:iiuliokk@gmail.com">iiuliokk@gmail.com</a></p>
+                <p><a href="tel:+37062939466">+37062939466</a></p>
+
               </div>
             </div>
 
@@ -147,7 +151,7 @@
           <h4>Programavimo procesas</h4>
           <p>Vaizdo įrašas, saugomas mano projekto media aplanke.</p>
 
-          <video controls width="100%">
+          <video controls class="media-video">
             <source src="assets/media/typing.mp4" type="video/mp4">
             Jūsų naršyklė nepalaiko šio vaizdo formato.
           </video>
@@ -159,13 +163,15 @@
           <h4>YouTube pristatymas</h4>
           <p>Integruotas vaizdo įrašas naudojant iframe.</p>
 
-          <iframe width="100%" height="215" 
-                  src="https://www.youtube.com/embed/BoUVIhtqjAw" 
-                  title="YouTube Video" 
-                  frameborder="0" 
-                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                  allowfullscreen>
-          </iframe>
+          <iframe
+  class="media-iframe"
+  height="215"
+  src="https://www.youtube.com/embed/BoUVIhtqjAw"
+  title="YouTube Video"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen>
+</iframe>
+
         </div>
       </div>
 
@@ -260,8 +266,8 @@
     <div class="portfolio-grid">
 
   <div class="portfolio-item">
-  <a href="#">
-    <img src="assets/img/lab_32.png">
+  <a href="assets/img/lab_32.png">
+    <img src="assets/img/lab_32.png" alt="3 laboratorinis grafikas Nr. 2">
     <p class="portfolio-caption">3 laboratorinis — grafikas Nr. 2</p>
   </a>
 </div>
@@ -329,7 +335,7 @@
   <footer id="footer" class="footer accent-background">
     <div class="container">
       <div class="copyright text-center">
-        <p>© Copyright <strong class="px-1 sitename">DevFolio</strong> All Rights Reserved</p>
+        <p>© Copyright <strong class="px-1 sitename">Julija Čalaja</strong> All Rights Reserved</p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href="#"><i class="bi bi-twitter-x"></i></a>
