--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     </section>
 
     <section id="about" class="about section">
+      <div class="about-shape"></div>
       <div class="container">
         <div class="row gy-4">
 
